# dl-vision

./: .gitignore  README.md  pyproject.toml
analysis/: analysis_file.py
data/: .~lock.HTCP_64_64_L.csv#
html/: all_models.html  mobile_custom.html  resnet_custom.html  resnet_mobile.html
logs_final/custom_model/20230219-172330/cm/: events.out.tfevents.1676827465.ehud.3388199.456.v2  events.out.tfevents.1676827761.ehud.3388199.465.v2  events.out.tfevents.1676828059.ehud.3388199.474.v2  events.out.tfevents.1676828358.ehud.3388199.483.v2  events.out.tfevents.1676828659.ehud.3388199.492.v2  events.out.tfevents.1676828961.ehud.3388199.501.v2  events.out.tfevents.1676829248.ehud.3388199.510.v2  events.out.tfevents.1676829549.ehud.3388199.519.v2  events.out.tfevents.1676829851.ehud.3388199.528.v2  events.out.tfevents.1676830141.ehud.3388199.537.v2  events.out.tfevents.1676830434.ehud.3388199.546.v2  events.out.tfevents.1676830727.ehud.3388199.555.v2  events.out.tfevents.1676831031.ehud.3388199.564.v2  events.out.tfevents.1676831325.ehud.3388199.573.v2  events.out.tfevents.1676831611.ehud.3388199.582.v2  (+15 more)
src/: clean_data.py  data_preparation.py  explain_model.py  main.py  model.py  model_compare.py  sliding_window.py
src/analyze/: eda.ipynb  lime.ipynb  training_results.ipynb
src/classification/: data_augmentation.py  data_preparation.py  main.py  model.py  train.py
src/classification/model/: MobileNetV2Texture.py  ModelTexture.py  custom_model.py  model_histopathologic.py  tensorboard_cm.py  tensorboard_image.py  tensorboard_lime.py
(+694 files in other folders)
